# advent-of-code

./: .gitignore  README.md
2019/day-01/1/: main.cpp
2019/day-01/2/: main.cpp
2019/day-02/1/: main.cpp  makefile
2019/day-02/2/: input  main.cpp
2019/day-03/1/: main.cpp
2019/day-03/2/: main.cpp  makefile
2019/day-04/1/: main.cpp
2019/day-04/2/: main.cpp
2019/day-05/1/: main.cpp
2019/day-05/2/: main.cpp
2019/day-06/1/: .input.swp  main.cpp  makefile
2019/day-06/2/: main.cpp
2019/day-07/1/: intCode.h  main.cpp
2019/day-07/2/: main.cpp
2019/day-08/1/: main.cpp
2019/day-08/2/: main.cpp
2019/day-09/1/: main.cpp  makefile
2019/day-09/2/: main.cpp  makefile
2019/intCode/: simpleIntCode.h  steppingIntCode.h
2021/: CMakeLists.txt
2021/day-01/: 1.cpp  2.cpp  CMakeLists.txt  main.cpp
2021/day-02/: 1.cpp  2.cpp  CMakeLists.txt  main.cpp
2021/day-03/: main.cpp
2021/day-04/: main.cpp
2021/day-05/: main.cpp
2021/day-06/: main.cpp
2021/day-07/: main.cpp
2021/day-08/: main.cpp
2021/day-09/: CMakeLists.txt  main.cpp
2021/day-10/: CMakeLists.txt  main.cpp
2021/day-11/: CMakeLists.txt  main.cpp
2021/day-12/: CMakeLists.txt  main.cpp
2021/day-13/: CMakeLists.txt  main.cpp
2021/day-14/: CMakeLists.txt  main.cpp
2021/day-15/: CMakeLists.txt  main.cpp
2021/day-16/: CMakeLists.txt  main.cpp
2021/day-17/: CMakeLists.txt  main.cpp
2021/day-18/: CMakeLists.txt  main.cpp
2021/day-19/: CMakeLists.txt  main.cpp  matricies.h
2021/day-20/: CMakeLists.txt  main.cpp
2021/day-21/: CMakeLists.txt  main.cpp
2021/day-22/: CMakeLists.txt  main.cpp  test_input4.txt
2021/input_selector/: CMakeLists.txt  input_selector.cpp  input_selector.h
2022/: CMakeLists.txt  CMakePresets.json
2022/day-01/: main.cpp
2022/day-02/: main.cpp
2022/day-03/: main.cpp
2022/day-04/: CMakeLists.txt  main.cpp
2022/day-05/: CMakeLists.txt  main.cpp
2022/day-06/: CMakeLists.txt  main.cpp
2022/day-07/: main.cpp
2022/day-08/: CMakeLists.txt  main.cpp
2022/day-09/: main.cpp
2022/day-10/: main.cpp
2022/day-11/: main.cpp
2022/day-12/: main.cpp
2022/day-13/: main.cpp
2022/day-14/: CMakeLists.txt  main.cpp
2022/day-15/: CMakeLists.txt  main.cpp  test_input2.txt
2022/day-16/: CMakeLists.txt  main.cpp
2023/: CMakeLists.txt
2023/day-01/: main.cpp
2023/day-02/: main.cpp
2023/day-03/: CMakeLists.txt  main.cpp
2023/day-04/: main.cpp
2023/day-05/: main.cpp
2023/day-06/: main.cpp
2023/day-07/: main.cpp
2023/day-08/: main.cpp
2023/day-09/: main.cpp
2023/day-10/: CMakeLists.txt  main.cpp
2023/day-11/: main.cpp
2023/day-12/: main.cpp
2023/input_selector/: CMakeLists.txt
2024/: CMakeLists.txt
2024/day-01/: CMakeLists.txt  main.cpp
2024/day-02/: CMakeLists.txt  main.cpp
2024/day-03/: main.cpp
2024/day-04/: main.cpp
2024/day-05/: main.cpp
2024/day-06/: main.cpp
2024/day-07/: CMakeLists.txt  main.cpp
2024/day-08/: main.cpp
2024/day-09/: CMakeLists.txt  main.cpp
2024/day-10/: main.cpp
2024/day-11/: CMakeLists.txt  main.cpp
2024/day-12/: CMakeLists.txt  main.cpp
2024/day-13/: CMakeLists.txt  main.cpp
2024/day-14/: main.cpp
2024/day-15/: main.cpp
2025/: CMakeLists.txt
2025/day-01/: main.cpp
2025/input_selector/: input_selector.cpp
